# codebase-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: releasing.md
docs/superpowers/specs/: 2026-03-23-codebase-graph-publishing-design.md  2026-03-23-go-language-support-design.md
scripts/: install.sh  verify_release_version.py
skill/codebase-graph/: SKILL.md
skill/codebase-graph/references/: query-guide.md
skills/codebase-graph/: SKILL.md
src/codebase_graph/: __init__.py  cli.py  hooks.py  release.py
src/codebase_graph/indexer/: __init__.py  engine.py  languages.py
src/codebase_graph/indexer/extractors/: __init__.py  base.py  go.py  javascript.py  python.py  typescript.py
src/codebase_graph/indexer/go/: __init__.py  project.py
src/codebase_graph/query/: __init__.py  context.py  formatter.py  relations.py  symbols.py
src/codebase_graph/storage/: __init__.py  db.py  schema.py
tests/: conftest.py  test_cli.py  test_db.py  test_engine.py  test_go_engine.py  test_go_extractor.py  test_go_project_context.py  test_hooks.py  test_install_script.py  test_javascript_extractor.py  test_python_extractor.py  test_query_context.py  test_query_relations.py  test_query_symbols.py  test_release.py  test_schema.py  test_typescript_extractor.py
tests/fixtures/go/basic/: main.go
tests/fixtures/go/test_only/: go.mod
tests/fixtures/go/test_only/pkg/: only_test_test.go
tests/fixtures/javascript/: app.js  lib.js
tests/fixtures/python/: main.py  models.py  utils.py
tests/fixtures/typescript/: helpers.ts  index.ts
(+4 files in other folders)
