[project]
name = "codebase-graph"
version = "0.1.0"
description = "Code navigation & context compression for agents"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.scripts]
cg = "codebase_graph.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_graph"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
